--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "production": "webpack -p"
   },
   "dependencies": {
+    "axios": "^0.11.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.0.1"
