--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "react-router": "^2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.7.6",
+    "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.8.0",
+    "babel-register": "^6.9.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
     "eslint-config-standard": "^5.1.0",
@@ -34,16 +35,13 @@
     "eslint-plugin-react": "^4.3.0",
     "eslint-plugin-standard": "^1.3.2",
     "html-webpack-plugin": "^2.15.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-
-    "mocha": "^2.4.5",
-    "chai": "^3.5.0",
     "istanbul": "^0.4.3",
     "jsdom": ">= 0.1.23 < 4.0.0",
+    "mocha": "^2.4.5",
     "nock": "^8.0.0",
-    "react-addons-test-utils": "^15.0.1"
-
+    "react-addons-test-utils": "^15.0.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
