--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,13 @@
     "babel-preset-stage-0"
   ],
 
+  "plugins": [
+      ["transform-runtime", {
+        "polyfill": false,
+        "regenerator": true
+      }]
+    ],
+
   "env": {
     "start": {
       "presets": [
