--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.11.1",
+    "babel-runtime": "^6.9.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.0.1"
@@ -21,6 +22,7 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
