--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^0.11.1",
     "babel-runtime": "^6.9.0",
+    "fs": "0.0.2",
+    "graceful-fs": "^4.1.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.0.1"
@@ -39,6 +41,7 @@
     "html-webpack-plugin": "^2.15.0",
     "istanbul": "^0.4.3",
     "jsdom": ">= 0.1.23 < 4.0.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
     "react-addons-test-utils": "^15.0.1",
